# emergence

./: .coverage  .eslintrc.js  .flake8  .gitignore  .pre-commit-config.yaml  .prettierrc  BRAIN-MAP.md  CHANGELOG.md  COMPLETION_REPORT.md  DAILY-SUMMARY.md  DRIVES-ENGAGEMENT.md  DRIVES.md  HEARTBEAT.md  INTEGRATION_SUMMARY.md  ISSUE_104_IMPLEMENTATION.md  ISSUE_105_COMPLETION.md  ISSUE_111_IMPLEMENTATION.md  ISSUE_39_IMPLEMENTATION.md  ISSUE_40_IMPLEMENTATION.md  ISSUE_41_IMPLEMENTATION.md  ISSUE_42_IMPLEMENTATION.md  ISSUE_69_TESTING_REPORT.md  LICENSE  MIGRATION.md  NAUTILUS-WIDGET-INTEGRATION.md  NAUTILUS_ALPHA_SUMMARY.md  NAUTILUS_CODE_QUALITY_COMPLETION.md  PHASE3_SUMMARY.md  PR_103_DESCRIPTION.md  PR_105_DESCRIPTION.md  README.md  RELEASE-NOTES.md  SUBAGENT_COMPLETION_REPORT.md  TASK_COMPLETE_SUMMARY.md  doorbell_state.json  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: pull_request_template.md  v0.3.0-issues.json
.openclaw/: workspace-state.json
archive/: drives-state.json  fix-satisfaction-events-bug.patch
books/: stories-of-your-life.epub
core/: __init__.py  cli.py  shelves_cli.py
docs/: AUTO_MODE.md  BRAND.md  CHOICE_MODE.md  CONTRIBUTING.md  F032-TESTING-AURORA.md  GITHUB_SETTINGS.md  HEADLESS-SETUP.md  JARVLING_WORKFLOW.md  PHASE1-STATE-SEPARATION.md  README.md  REVIEW_GUIDELINES.md  ROOM-V2.md  TESTING_BRANCH_CLEANUP.md  api.md  aspirations-and-projects.md  aurora-deployment-v0.4.0.md  budget-guide.md  drives-deep-dive.md  drives-status-tool.md  first-light-guide.md  getting-started.md  migration-v0.4.0.md  nautilus-api.md  nautilus-integration-plan.md  nautilus-quickstart.md  nautilus-troubleshooting.md  nautilus-user-guide.md  nautilus-v0.4.0-integration.md  openclaw-integration.md  phase3-implementation-summary.md  philosophy.md  (+6 more)
(+897 files in other folders)
