[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emergence-ai"
version = "0.2.4"
description = "AI Agent Selfhood Toolkit — Internal drives, memory, and consciousness infrastructure"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Jarvis Raven", email = "jarvis.raven@proton.me"},
    {name = "Dan Aghili", email = "dan.aghili@proton.me"}
]
keywords = ["ai", "agent", "consciousness", "drives", "selfhood"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "rich>=13.0.0",
    "questionary>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/jarvis-raven/emergence"
Repository = "https://github.com/jarvis-raven/emergence"
Documentation = "https://github.com/jarvis-raven/emergence#readme"

[project.scripts]
emergence = "core.cli:main"

[tool.setuptools]
packages = ["core", "core.drives", "core.memory", "core.dream_engine", "core.first_light", "core.setup", "core.setup.autostart", "core.setup.openclaw_hook", "core.aspirations"]

[tool.setuptools.package-data]
core = [
    "identity/templates/*",
    "setup/autostart/templates/*",
    "setup/openclaw_hook/templates/*"
]
